--- a/MobileApp/MobileApp/ReceivedOfferTakeAction.xaml
+++ b/MobileApp/MobileApp/ReceivedOfferTakeAction.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileApp.MakeOfferForReceivedQuery">
+             x:Class="MobileApp.ReceivedOfferTakeAction">
     <TabbedPage.Children>
         <ContentPage Title="TableView">
             <ContentPage.Content>
