--- a/MobileApp/MobileApp/Views/SubmittedQueryOffers.xaml
+++ b/MobileApp/MobileApp/Views/SubmittedQueryOffers.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:beh="clr-namespace:MobileApp.Behaviours;assembly=MobileApp"
-             x:Class="MobileApp.SubmittedQueryOffers">
+             x:Class="MobileApp.Views.SubmittedQueryOffers"
+             Title="Your Query Offers"
+             NavigationPage.HasBackButton="True" 
+             NavigationPage.HasNavigationBar="True"
+             >
     <ContentPage.Resources>
         <ResourceDictionary>
             <beh:SelectedItemEventArgsToSelectedItemConverter x:Key="SelectedItemConverter" />
@@ -10,10 +14,10 @@
     </ContentPage.Resources>
     <StackLayout Orientation="Vertical">
         <ActivityIndicator IsVisible="{Binding IsLoading}" IsRunning="{Binding IsLoading}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"></ActivityIndicator>
-        <ListView ItemsSource="{Binding Items}">
+        <ListView ItemsSource="{Binding Items}"  IsPullToRefreshEnabled="true" IsRefreshing="{Binding IsLoading}">
             <ListView.RowHeight>
                 <OnPlatform x:TypeArguments="x:Int32">
-                    <On Platform="iOS" Value="50" />
+                    <!--<On Platform="iOS" Value="50" />-->
                     <On Platform="Android,WinPhone,Windows" Value="40" />
                 </OnPlatform>
             </ListView.RowHeight>
@@ -23,9 +27,9 @@
                         <ViewCell.View>
                             <StackLayout Padding="10,5,10,5" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                                 <StackLayout Orientation="Vertical" HorizontalOptions="StartAndExpand" >
-                                    <Label Text="{Binding Name}">
+                                    <Label Text="{Binding Bidder}">
                                         <Label.FontSize>
-                                            <OnIdiom x:TypeArguments="x:Double" Phone="11" Tablet="15" />
+                                            <!--<OnIdiom x:TypeArguments="x:String" Phone="11" Tablet="15" />-->
                                         </Label.FontSize>
                                     </Label>
                                     <Label Text="{Binding Description}">
@@ -33,19 +37,19 @@
                                             <OnIdiom x:TypeArguments="LineBreakMode" Phone="TailTruncation" Tablet="MiddleTruncation" />
                                         </Label.LineBreakMode>
                                         <Label.FontSize>
-                                            <OnIdiom x:TypeArguments="x:Double" Phone="8" Tablet="12" />
+                                            <!--<OnIdiom x:TypeArguments="x:String" Phone="8" Tablet="12" />-->
                                         </Label.FontSize>
                                     </Label>
                                 </StackLayout>
                                 <StackLayout Orientation="Vertical" HorizontalOptions="End" >
-                                    <Label Text="{Binding StartingBid, StringFormat='Start: {0:c}'}">
-                                        <Label.FontSize>
-                                            <OnIdiom x:TypeArguments="x:Double" Phone="11" Tablet="15" />
-                                        </Label.FontSize>
-                                    </Label>
-                                    <Label Text="{Binding CurrentBid, StringFormat='Current: {0:c}'}">
+                                    <Label Text="{Binding OfferPrice, StringFormat='Price: {0:c}'}">
                                         <Label.FontSize>
                                             <OnIdiom x:TypeArguments="x:Double" Phone="8" Tablet="12" />
+                                        </Label.FontSize>
+                                    </Label>
+                                    <Label Text="{Binding Status}">
+                                        <Label.FontSize>
+                                            <!--<OnIdiom x:TypeArguments="x:String" Phone="11" Tablet="15" />-->
                                         </Label.FontSize>
                                     </Label>
                                 </StackLayout>
@@ -55,7 +59,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.Behaviors>
-                <beh:ListViewSelectedItemBehavior Command="{Binding PlaceBid}" Converter="{StaticResource SelectedItemConverter}" />
+                <beh:ListViewSelectedItemBehavior Command="{Binding TakeActionOnReceivedOffer}" Converter="{StaticResource SelectedItemConverter}" />
             </ListView.Behaviors>
         </ListView>
     </StackLayout>
