--- a/MobileApp/MobileApp/Views/CreateGroceryQuery.xaml
+++ b/MobileApp/MobileApp/Views/CreateGroceryQuery.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileApp.Views.CreateFoodQuery"
-             Title="Create Food Query">
+             x:Class="MobileApp.Views.CreateGroceryQuery"
+             Title="Create Grocery Query">
     <ContentPage.Content>
         <FlexLayout IsVisible="True" JustifyContent="SpaceEvenly" Direction="Column" AlignItems="Center" Margin="30,0,30,0" >
             <Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />
-            <Label TextColor="Black" FontAttributes="Bold" Text="What do you want to eat?" FlexLayout.AlignSelf="Center" FontSize="20"/>
-            <Entry x:Name="queryName" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
+            
+            <Label TextColor="Black" FontAttributes="Bold" Text="What do you need" FlexLayout.AlignSelf="Center" FontSize="20"/>
+            <Entry x:Name="queryGroceryList" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
             <Label TextColor="Black" FontAttributes="Bold" Text="Do you need this to be delivered to you?" FlexLayout.AlignSelf="Center" FontSize="20"/>
             <CheckBox x:Name="queryDelivery" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  />
             <Label TextColor="Black" FontAttributes="Bold" Text="When do you need these?" FlexLayout.AlignSelf="Center" FontSize="20"/>
