--- a/MobileApp/MobileApp/Views/CreateFoodQuery.xaml
+++ b/MobileApp/MobileApp/Views/CreateFoodQuery.xaml
@@ -5,7 +5,7 @@
              Title="Create Food Query">
     <ContentPage.Content>
         <FlexLayout IsVisible="True" JustifyContent="SpaceEvenly" Direction="Column" AlignItems="Center" Margin="30,0,30,0" >
-            <Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />
+            <!--<Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />-->
             <Label TextColor="Black" FontAttributes="Bold" Text="What do you want to eat?" FlexLayout.AlignSelf="Center" FontSize="20"/>
             <Entry x:Name="queryName" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
             <Label TextColor="Black" FontAttributes="Bold" Text="Do you need this to be delivered to you?" FlexLayout.AlignSelf="Center" FontSize="20"/>
