--- a/MobileApp/MobileApp/Views/CreatePearToPearQuery.xaml
+++ b/MobileApp/MobileApp/Views/CreatePearToPearQuery.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.CreatePearToPearQuery"
-             Title="Create Pear to Pear Query">
+             Title="Create Person to Person Query">
     <ContentPage.Content>
         <FlexLayout IsVisible="True" JustifyContent="SpaceEvenly" Direction="Column" AlignItems="Center" Margin="30,0,30,0" >
-            <Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />
+            <!--<Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />-->
             
             <Label TextColor="Black" FontAttributes="Bold" Text="What do you need" FlexLayout.AlignSelf="Center" FontSize="20"/>
             <Entry x:Name="queryGroceryList" ReturnType="Next" FontSize="Medium" FlexLayout.AlignSelf="Stretch"  HorizontalOptions="CenterAndExpand"  TextColor="Black" />
