--- a/MobileApp/MobileApp/Views/MapView.xaml
+++ b/MobileApp/MobileApp/Views/MapView.xaml
@@ -3,10 +3,48 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.MapView"
              xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
-             Title="Map">
+             xmlns:bindings="clr-namespace:Xamarin.Forms.GoogleMaps.Bindings;assembly=Xamarin.Forms.GoogleMaps.Bindings"
+             xmlns:vm="clr-namespace:MobileApp.ViewModels"
+             Title="Map"
+             >    
     <ContentPage.Content>
-        <StackLayout>
-          <maps:Map VerticalOptions="FillAndExpand"/>
-        </StackLayout>
+        <Grid>
+          <maps:Map VerticalOptions="FillAndExpand"
+                    MyLocationEnabled="True"
+                    x:Name="GoogleMap"
+                    />
+
+            <StackLayout BackgroundColor="White"
+                        Orientation="Horizontal"
+                        VerticalOptions="Start"
+                        Padding="10"
+                        x:Name="searchLayout"
+                        Margin="30,50,30,0">
+                <Image Source="ic_search"
+                              HeightRequest="15"
+                              WidthRequest="15"/>
+                <Label HorizontalOptions="FillAndExpand"
+                              LineBreakMode="TailTruncation"
+                              FontAttributes="Italic"
+                              Text="Search Place"
+                              TextColor="Gray"/>
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer 
+                               Tapped="OnEnterAddressTapped" />
+                </StackLayout.GestureRecognizers>
+            </StackLayout>
+
+            <Button Text="Stop"
+                   Margin="40"
+                   Clicked="Handle_Stop_Clicked"
+                   Command="{Binding StopRouteCommand}"
+                   IsVisible="false"
+                   x:Name="stopRouteButton"
+                   BackgroundColor="Red"
+                   TextColor="White"
+                   FontSize="17"
+                   VerticalOptions="EndAndExpand"
+                   HorizontalOptions="FillAndExpand"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
