Added some directories in Views for better structure

--- a/MobileApp/MobileApp/Views/CreateQuery/CreatePearToPearQuery.xaml
+++ b/MobileApp/MobileApp/Views/CreateQuery/CreatePearToPearQuery.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileApp.Views.CreateGroceryQuery"
-             Title="Create Grocery Query">
+             x:Class="MobileApp.Views.CreateQuery.CreatePearToPearQuery"
+             Title="Create Person to Person Query">
     <ContentPage.Content>
         <FlexLayout IsVisible="True" JustifyContent="SpaceEvenly" Direction="Column" AlignItems="Center" Margin="30,0,30,0" >
             <!--<Image Source="hakuna.png" HeightRequest="140" WidthRequest="140" FlexLayout.AlignSelf="Center" BackgroundColor="Transparent" />-->
