--- a/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/Views/HomePage.xaml
@@ -2,7 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:beh="clr-namespace:MobileApp.Behaviours;assembly=MobileApp"
-             x:Class="MobileApp.Views.Queries"
+             x:Class="MobileApp.Views.HomePage"
              Title="Home Page"
              NavigationPage.HasBackButton="True" 
              NavigationPage.HasNavigationBar="True"
