--- a/MobileApp/MobileApp/Views/GoogleMaps/MapView.xaml
+++ b/MobileApp/MobileApp/Views/GoogleMaps/MapView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileApp.Views.MapView"
+             x:Class="MobileApp.Views.GoogleMaps.MapView"
              xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              xmlns:bindings="clr-namespace:Xamarin.Forms.GoogleMaps.Bindings;assembly=Xamarin.Forms.GoogleMaps.Bindings"
              xmlns:vm="clr-namespace:MobileApp.ViewModels"
