--- a/MobileApp/MobileApp/Views/SubmittedQueries/SubmittedQueryOffers.xaml
+++ b/MobileApp/MobileApp/Views/SubmittedQueries/SubmittedQueryOffers.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:beh="clr-namespace:MobileApp.Behaviours;assembly=MobileApp"
-             x:Class="MobileApp.Views.SubmittedQueryOffers"
+             x:Class="MobileApp.Views.SubmittedQueries.SubmittedQueryOffers"
              Title="Your Query Offers"
              NavigationPage.HasBackButton="True" 
              NavigationPage.HasNavigationBar="True"
