--- a/MobileApp/MobileApp/Views/CreateQuery/SelectQueryCategory.xaml
+++ b/MobileApp/MobileApp/Views/CreateQuery/SelectQueryCategory.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileApp.Views.CreateQuery.SelectQueryCategory">
+             x:Class="MobileApp.Views.CreateQuery.SelectQueryCategory"
+             Title="Select a Category"
+             NavigationPage.HasBackButton="True"
+             >
     <ContentPage.Content>
-        <StackLayout Margin="10,35,10,10">
-            <Label Text="Select a Category"
-               HorizontalOptions="Center"
-               FontAttributes="Bold" />
+        <StackLayout Margin="10,35,10,10">            
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
